--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="box-1">
-            <a href="lightsOn()"><img src="images/switch.jpg" alt="switch-click" class="switch-1"></a>
+            <a href="lightsOn()"><img id="id-js-1 " src="images/switch.jpg" alt="switch-click" class="switch-1"></a>
             <h1 class="hey">HEY!!</h1>
             <br>
             <h1 class="dont">Dont forget to turn on the light</h1>
